[GH-PAGES] Updated template

--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@ layout: default
       <span>{{ site.description }}</span>
       <br>
       <br>
-      <span>Want to learn more about us? Check out at <a href="https://mysquar.com/en">MySQUAR.com</a></span>
+      <span>Want to know more about me?</span>
+      <br>
+      <span>Check out at <a href="https://github.com/henrytao-me">github@henrytao-me</a></span>
+      <span>and</span>
+      <span><a href="http://angularify.org">angularify.org</a></span>
     </h2>
 </header>
 
